--- a/static/update-webpanel/webpanel.html
+++ b/static/update-webpanel/webpanel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>deblocus</title>
+ <head> 
+  <title>deblocus</title> 
   <style>
 body {
     font-family: 'Segoe UI',Arial,'Microsoft Yahei',sans-serif;
@@ -29,6 +29,10 @@ body {
 .status-container{
 	line-height: 2em;
 }
+span.field{
+	display: inline-block;
+	width: 12em;
+}
 </style> 
  </head> 
  <body> 
@@ -36,18 +40,24 @@ body {
    <div class="header-container"> 
     <h1>deblocus client</h1> 
     <div class="version-container">
-     Ver: {{.Version}}
+      {{.Version}} 
     </div> 
    </div> 
    <div class="status-container"> 
-    <div class="status-line">
-     deblocus is running.
+    <div class="status-line"> 
+     <span class="field">Start Time:</span> {{.StartTime}} 
     </div> 
-    <div class="status-line">
-     Start time: {{.StartTime}}
+    <div class="status-line"> 
+     <span class="field">Current Status:</span> {{if .Ready}}Online{{else}}Offline{{end}} {{.Connection}} 
     </div> 
-    <div class="status-line">
-     Served requests: {{.NReq}}
+    <div class="status-line"> 
+     <span class="field">Current Latency:</span> {{.AvgRtt}} 
+    </div> 
+    <div class="status-line"> 
+     <span class="field">Served Requests:</span> {{.ReqCount}} 
+    </div> 
+    <div class="status-line"> 
+     <span class="field">Offline Count:</span> {{.Round}} 
     </div> 
    </div> 
   </div>  
