--- a/static/update-webpanel/webpanel.html
+++ b/static/update-webpanel/webpanel.html
@@ -1,65 +1,80 @@
 <!DOCTYPE html>
 <html>
- <head> 
-  <title>deblocus</title> 
-  <style>
-body {
-    font-family: 'Segoe UI',Arial,'Microsoft Yahei',sans-serif;
-    font-size: 87.5%;
-}
-.container {
-	margin: 0 auto;
-    max-width: 850px;
-    padding: 0 30px;
-    width: 90%;
-}
-.header-container{
-	height: 5em;
-	line-height: 5em;
-	position: relative;
-	border-bottom: 1px solid #eee;
-	margin-bottom: 2em;
-}
-.version-container{
-	position: absolute;
-	line-height: 1em;
-	top: 2em;
-	right: 2em;
-}
-.status-container{
-	line-height: 2em;
-}
-span.field{
-	display: inline-block;
-	width: 12em;
-}
-</style> 
- </head> 
- <body> 
-  <div class="container"> 
-   <div class="header-container"> 
-    <h1>deblocus client</h1> 
-    <div class="version-container">
-      {{.Version}} 
-    </div> 
-   </div> 
-   <div class="status-container"> 
-    <div class="status-line"> 
-     <span class="field">Start Time:</span> {{.StartTime}} 
-    </div> 
-    <div class="status-line"> 
-     <span class="field">Current Status:</span> {{if .Ready}}Online{{else}}Offline{{end}} {{.Connection}} 
-    </div> 
-    <div class="status-line"> 
-     <span class="field">Current Latency:</span> {{.AvgRtt}} 
-    </div> 
-    <div class="status-line"> 
-     <span class="field">Served Requests:</span> {{.ReqCount}} 
-    </div> 
-    <div class="status-line"> 
-     <span class="field">Offline Count:</span> {{.Round}} 
-    </div> 
-   </div> 
-  </div>  
- </body>
+<head>
+    <meta charset="utf-8"/>
+    <title>deblocus</title>
+    <style type="text/css">
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        html, body, h1, h2, h3 {
+            margin: 0;
+        }
+
+        .container {
+            margin: 0 auto;
+            max-width: 850px;
+            padding: 0 30px;
+            width: 90%;
+        }
+
+        .header-container {
+            height: 5em;
+            line-height: 5em;
+            position: relative;
+            border-bottom: 1px solid #eee;
+            margin-bottom: 2em;
+        }
+
+        .version-container {
+            font-size: 87.5%;
+            position: absolute;
+            line-height: 1em;
+            top: 2em;
+            right: 2em;
+        }
+
+        .status-container {
+            line-height: 2.5em;
+        }
+
+        span.field {
+            display: inline-block;
+            width: 12em;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <div class="header-container">
+        <h1>deblocus client</h1>
+        <div class="version-container">
+            {{.Version}}
+        </div>
+    </div>
+    <div class="status-container">
+        <div class="status-line">
+            <span class="field">Start Time:</span>
+            <span>{{.StartTime}}</span>
+        </div>
+        <div class="status-line">
+            <span class="field">Current Status:</span>
+            <span>{{if .Ready}}Online{{else}}Offline{{end}} {{.Connection}}</span>
+        </div>
+        <div class="status-line">
+            <span class="field">Current Latency:</span>
+            <span>{{.AvgRtt}}</span>
+        </div>
+        <div class="status-line">
+            <span class="field">Served Requests:</span>
+            <span>{{.ReqCount}}</span>
+        </div>
+        <div class="status-line">
+            <span class="field">Offline Count:</span>
+            <span>{{.Round}}</span>
+        </div>
+    </div>
+</div>
+</body>
 </html>
